# sockfish

./: .clang-format  .gitignore  CHANGELOG.md  Makefile  README.md  \  meson.build  temp
.cache/clangd/index/: Cli.cpp.9108B99C5F78F824.idx  Cli.h.3CB081F7ABE0AF52.idx  Engine.cpp.CCFF603798D5B7DF.idx  Engine.h.182726FA11A0ACBA.idx  Game.h.34684DB60687C42A.idx  GameState.cpp.BFB4CC5C1E9623C9.idx  GameState.h.42870066236166D4.idx  Gui.cpp.83CF70AD4E6C1D97.idx  Gui.h.6FA4BAD479A26192.idx  Metadata.h.2E141D85E4B3CACF.idx  Move.cpp.5374D852A08166D2.idx  Move.h.2624A54BC9C7279D.idx  Piece.h.73DB3DA9D296EAF4.idx  PieceType.h.6D4ECA44FB973D9E.idx  PromotionMenu.cpp.9FCF5127B84D19BC.idx  PromotionMenu.h.870F816E41FA17A1.idx  bit_tools.cpp.0064039065F4F38C.idx  bit_tools.h.362DFB3BCAD3846E.idx  constants.h.D0E87415E475AEA2.idx  main.cpp.D0CC14DBB57AF0F0.idx  test.cpp.103998E8B41DC190.idx
games/: beat_cpu_badly.txt  beat_cpu_badly_again.txt  cpu_played_terrible_quick_win.txt  mirror_60s_1s_inc.pgn  recent.pgn  recent.txt  self.pgn
scripts/: perft.sh  results.txt
src/: AttackTable.h  Board.cpp  Board.h  BoardRenderer.cpp  BoardRenderer.h  CMakeLists.txt  Cli.cpp  Cli.h  CliFrontend.cpp  CliFrontend.h  Config.cpp  Config.h  Engine.cpp  Engine.h  Game.h  GameController.cpp  GameController.h  GameState.cpp  GameState.h  Gui.cpp  Gui.h  GuiFrontend.cpp  GuiFrontend.h  Magic.cpp  Magic.h  Makefile  Metadata.h  Move.cpp  Move.h  MoveComputers.cpp  MoveComputers.h  MoveGenerator.cpp  MoveGenerator.h  PRNG.h  Piece.h  Position.cpp  Position.h  PositionUtil.cpp  PositionUtil.h  Printers.cpp  (+15 more)
src/ai/: Engine.cpp  Engine.h  Evaluator.cpp  Evaluator.h  MoveSorter.cpp  MoveSorter.h  PVTable.cpp  PVTable.h  PolyglotBook.cpp  PolyglotBook.h  RepetitionTable.cpp  RepetitionTable.h  Searcher.cpp  Searcher.h  TranspositionTable.cpp  TranspositionTable.h
src/ai/search/: ManualSearchStopper.cpp  ManualSearchStopper.h  SearchStopper.h  SearchStopwatch.cpp  SearchStopwatch.h  Searcher.cpp  Searcher.h
src/backend/: BitBoard.cpp  BitBoard.h  GameState.cpp  GameState.h  Metadata.h  Move.cpp  Move.h  bit_tools.cpp  bit_tools.h  game.cpp
src/bitboard/: Magic.h  PieceMasks.h  Zobrist.h  bit_tools.h
src/cli/: CliGame.cpp  CliGame.h
src/common/: Piece.h  PieceType.h  constants.h  types.cpp  types.h
src/config/: Config.cpp  Config.h
src/core/: Board.h  GameController.cpp  GameController.h  Move.cpp  Move.h  MoveList.h  Notation.cpp  Notation.h  PGNWriter.cpp  PGNWriter.h  Position.cpp  Position.h  PositionUtil.cpp  PositionUtil.h  Printers.cpp  Printers.h  types.h
src/engine/: Engine.cpp  Engine.h
src/frontend/cli/: CliFrontend.cpp  CliFrontend.h
src/frontend/gui/: GuiFrontend.cpp  Palette.h  PromotionMenu.cpp
src/frontend/uci/: UciFrontend.cpp  UciFrontend.h
src/game/: Game.h
src/game/cli/: Cli.cpp  Cli.h
src/game/gui/: Gui.cpp  Gui.h  PromotionMenu.cpp  PromotionMenu.h
src/gui/: Game.cpp  Game.h  PromotionMenu.cpp  PromotionMenu.h
src/include/: constants.h  game.h  piece.h
src/movegen/: MoveComputers.cpp  MoveComputers.h  MoveGenerator.cpp  MoveGenerator.h
src/test/: perft.cpp  test.cpp
src/test/testfiles/: input  output.reference
src/testfiles/: input  output.reference
src/ui/cli/: CliFrontend.cpp  CliFrontend.h
src/ui/gui/: GuiFrontend.cpp  GuiFrontend.h  PromotionMenu.h
